hphp/hack/test/typecheck/expression_trees/splice_err3.php.like_types.exp
File "splice_err3.php", line 7, characters 15-21:
Typing error (Typing[4110])
  File "splice_err3.php", line 7, characters 15-21:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 34, characters 5-45:
  But got `dynamic` because it is an unenforceable type
File "splice_err3.php", line 9, characters 15-15:
Typing error (Typing[4110])
  File "splice_err3.php", line 9, characters 15-15:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "splice_err3.php", line 13, characters 13-13:
Typing error (Typing[4110])
  File "splice_err3.php", line 13, characters 13-13:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
